--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button id="new-game-btn" style="display:none;">New Game</button>
     </div>
 
-    <script src="SudokuScript.js"></script>
-    <script src="Script.js"></script>
+    <script src="sudokuScript.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
